web: fix font-color of select inputs in dark mode

--- a/web/src/authentik.css
+++ b/web/src/authentik.css
@@ -205,6 +205,9 @@ body {
         color: var(--ak-dark-foreground);
     }
     /* inputs */
+    optgroup, option {
+        color: var(--ak-dark-foreground);
+    }
     .pf-c-input-group {
         --pf-c-input-group--BackgroundColor: transparent;
     }
